syntax = "proto3";

package IT.WebServices.Fragments.Authorization.Payment.Fortis;

message FortisPublicSettings {
  bool Enabled = 1;
  bool IsTest = 2;
}

message FortisOwnerSettings {
  string UserID = 1;
  string UserApiKey = 2;
  string LocationID = 3;
  string ProductID = 4;
}
